# callout

./: .gitignore  CLAUDE.md  CNAME  Cargo.toml  Makefile  README.md
.claude/: settings.json
.github/workflows/: ci.yml
docs/: CNAME  index.html  pitch.html
docs/plans/: 2026-06-28-callout-design.md  2026-06-30-voice-permission-hooks-design.md  2026-06-30-voice-permission-hooks-implementation.md
src/: agents.rs  cli.rs  config.rs  glossary.rs  hook.rs  install.rs  lib.rs  logs.rs  main.rs  model.rs  ptt.rs  recorder.rs  router.rs  speaker.rs  transcriber.rs  tray.rs  voices.rs
src/api/: agents.rs  ask.rs  error.rs  mod.rs  notify.rs  ptt.rs  status.rs
tests/: api.rs  hook_client.rs
