[package]
name = "callout"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "callout"
path = "src/main.rs"

[lib]
name = "callout"
path = "src/lib.rs"

[dependencies]
tokio        = { version = "1",    features = ["full"] }
axum         = "0.7"
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
toml         = "0.8"
toml_edit    = "0.22"
uuid         = { version = "1",    features = ["v4"] }
anyhow       = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs         = "5"
strsim       = "0.11"
clap         = { version = "4",    features = ["derive"] }

# Audio pipeline (Phase 2)
cpal          = "0.15"
rubato        = "0.15"
whisper-rs    = "0.11"
global-hotkey = "0.6"

# macOS: event loop (AppKit), global-hotkey, tray icon
[target.'cfg(target_os = "macos")'.dependencies]
objc2            = "0.6"
objc2-app-kit    = "0.3"
objc2-foundation = "0.3"
tray-icon        = "0.19"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
